# circus

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MUJOCO_LOG.TXT  README.md  TODO.md  build_and_run.sh  pixi.toml
.github/workflows/: .clang-format-check.yml
Include/: AppWindow.h  CircusApplication.h  Constants.h  ContainerManager.h  ContainersManager.h  MujocoContext.h  Robot.h  RobotManager.h  SceneParser.h  Sensor.h  SensorWindow.h  SimulationThread.h  SimulationViewport.h  Simulator.h
Include/Core/: Application.h  MuJoCoWidget.h  Renderer.h  Simulator.h
OLD/: Simulator_old.cpp  Simulator_old.h  main_old.cpp
Resources/: exp_scene.yaml  scene.xml  scene_debug.xml  scene_k1.xml  scene_real.xml  scene_t1.xml
Resources/Scenes/: mixed_scene.yaml
Resources/includes/: ball.xml  fieldKidSize.xml  fieldRCAP.xml  fieldSPL.xml
Resources/models/: T1_locomotion.xml  T1_locomotion_dummy.xml
Resources/robots/Booster-K1/: common.xml  instance.xml
Resources/robots/Booster-K1/models/: Booster-K1_common.xml  K1_serial.xml  K1_serial_common.xml  K1_serial_instance.xml
Resources/robots/Booster-T1/: common.xml  instance.xml
Resources/robots/Booster-T1/models/: Booster-T1_common.xml  T1_locomotion.xml  T1_locomotion_dummy.xml  T1_serial.xml
Src/: AppWindow.cpp  Bindings.cpp  CMakeLists.txt  CircusApplication.cpp  ContainerManager.cpp  ContainersManager.cpp  MujocoContext.cpp  RobotManager.cpp  SceneParser.cpp  Sensor.cpp  SensorWindow.cpp  SimulationThread.cpp  SimulationViewport.cpp  Simulator.cpp  main.cpp
Src/Core/: Application.cpp  MuJoCoWidget.cpp  Renderer.cpp  Simulator.cpp
Tools/: build.sh  mujoco_installer.sh
cmake/: Findmujoco.cmake  config.cmake.in
